[gd_scene load_steps=6 format=2]

[ext_resource path="res://autoload/MusicMan.gd" type="Script" id=1]
[ext_resource path="res://audio/music/Tower of Blood (Title Theme) - final - actualy.mp3" type="AudioStream" id=2]
[ext_resource path="res://audio/sfx/stairs.wav" type="AudioStream" id=3]
[ext_resource path="res://audio/music/Asleep In His Coffin (Credits).mp3" type="AudioStream" id=4]
[ext_resource path="res://audio/music/Ascend The Tower.mp3" type="AudioStream" id=5]

[node name="MusicMan" type="Node"]
script = ExtResource( 1 )

[node name="MainMenuMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
volume_db = 2.0
bus = "Music"

[node name="CreditsMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
bus = "Music"

[node name="LevelMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -10.0
bus = "Music"

[node name="StairsSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
bus = "SFX"
